@@ -13,6 +13,9 @@ dpkg (1.17.17) UNRELEASED; urgency=low
   * Add missing imports from Dpkg::BuildProfiles in dpkg-genchanges.
     Regression introduced in dpkg 1.17.14. Closes: #764216
     Reported by Johannes Schauer <j.schauer@email.de>.
+  * Initialize dependencies with the correct minimum version from a symbols
+    file with multiple SONAMEs in dpkg-shlibdeps.
+    Thanks to Jérémy Bobbio <lunar@debian.org>. Closes: #764721
 
   [ Updated programs translations ]
   * German (Sven Joachim).
